# buildDify

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  ruff.toml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 016c94301d05_create_wf_workflow_wf_run_wf_node_run.py  0959a193ccda_create_kb_dataset_kb_document_kb_segment.py  499fba59e942_create_app_conversation_and_app_message.py  4a2d57bddb4f_create_auth_user.py  5f6e3ff7d15c_create_agent_tool_agent_thought.py  851e7777c56f_create_app_app_app_app_config_auth_api_.py
backend/app/: main.py
backend/app/agent/: __init__.py  react.py  tools.py
backend/app/api/: agent.py  apps.py  auth.py  chat.py  knowledge.py  llm_gateway.py  metrics.py  workflows.py
backend/app/core/: config.py  db.py  deps.py  observability.py  security.py
backend/app/llm/: anthropic_provider.py  base.py  factory.py  openai_provider.py  wire.py
backend/app/models/: agent.py  app.py  base.py  conversation.py  knowledge.py  user.py  workflow.py
backend/app/repositories/: agent.py  app.py  conversation.py  knowledge.py  user.py  workflow.py
backend/app/schemas/: agent.py  app.py  auth.py  chat.py  knowledge.py  workflow.py
backend/app/services/: agent.py  app.py  auth.py  chunking.py  (+6 more)
backend/tests/: test_agent_engine.py  test_agent_routes.py  test_app_routes.py  test_chat_routes.py  test_chunking.py  test_gateway.py  test_knowledge.py  test_llm_wire.py  test_metrics.py  test_security.py  test_workflow_engine.py  test_workflow_routes.py
(+33 files in other folders)
