[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "anthropic>=0.112.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "celery[redis]>=5.6.3",
    "email-validator>=2.3.0",
    "fastapi>=0.138.1",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "redis>=6.4.0",
    "sqlalchemy[asyncio]>=2.0",
    "sse-starlette>=3.4.5",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]
